--- a/package.json
+++ b/package.json
@@ -168,7 +168,7 @@
     "http-server": "^0.11.1",
     "md5-file": "^3.2.3",
     "nodemon": "^1.18.4",
-    "npm-run-all": "4.0.2",
+    "npm-run-all": "^4.1.5",
     "pngjs": "^3.3.2",
     "tslint": "5.5.0",
     "typescript": "2.9.2",
