--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "analyze:premium": "ts-node src/server/tasks/analysis/premium",
     "analyze:spawners": "ts-node src/server/tasks/analysis/spawner-heatmap",
     "analyze:skilltrees": "ts-node src/server/tasks/analysis/skilltrees",
+    "analyze:progression": "ts-node src/server/tasks/analysis/item-progression",
     "runseed:prod": "npm-run-all \"seed:* -- --prod\"",
     "bump:patch": "npm version patch -m \"Patch release %s\"",
     "bump:minor": "npm version minor -m \"Minor release %s\"",
