--- a/src/content/npcs/risan/FrozenCatacombs/lairs.yml
+++ b/src/content/npcs/risan/FrozenCatacombs/lairs.yml
@@ -372,6 +372,16 @@
         damageType: 'physical'
         potency: 0.25
 
+    - name: TrueSight
+      effectData:
+        effectInfo:
+          isPermanent: true
+
+    - name: DarkVision
+      effectData:
+        effectInfo:
+          isPermanent: true
+
   copyDrops:
     - drop: 'rightHand'
       chance: -1
