--- a/src/content/items/Scaleplate/crafted.yml
+++ b/src/content/items/Scaleplate/crafted.yml
@@ -21,6 +21,7 @@
   desc: "a bright red scaleplate, twice refined, forged with ether"
   binds: true
   value: 15000
+  maxEnchantLevel: 10
 
   requirements:
     level: 21
@@ -51,6 +52,7 @@
   desc: "a shining silver scaleplate, twice refined, forged with refined silver scales"
   binds: true
   value: 15000
+  maxEnchantLevel: 10
 
   requirements:
     level: 40
