--- a/src/content/items/Abacus.yml
+++ b/src/content/items/Abacus.yml
@@ -2,7 +2,7 @@
 - name: Abacus of Life
   sprite: 707
   desc: "a golden abacus whose strings twang with the sounds of life"
-  value: 1000000
+  value: 10
   effect:
     name: Reincarnate
     uses: 1
