--- a/src/content/npcs/risan/FrozenCatacombs/3F.yml
+++ b/src/content/npcs/risan/FrozenCatacombs/3F.yml
@@ -622,7 +622,7 @@
       chance: 800
     - result: Catacombs HolyFire Hammer
       chance: 1
-    - result: Catacombs Bat Greatsword
+    - result: Catacombs Bat Shortsword
       chance: 1
     - result: Frost Chakram
       chance: 1
