--- a/src/content/npcs/risan/FrozenCatacombs/4F.yml
+++ b/src/content/npcs/risan/FrozenCatacombs/4F.yml
@@ -632,7 +632,7 @@
       chance: 700
     - result: Catacombs HolyFire Hammer
       chance: 1
-    - result: Catacombs Bat Greatsword
+    - result: Catacombs Bat Shortsword
       chance: 1
     - result: Frost Chakram
       chance: 1
