--- a/src/content/npcs/risan/FrozenCatacombs/5F.yml
+++ b/src/content/npcs/risan/FrozenCatacombs/5F.yml
@@ -639,7 +639,7 @@
       chance: 600
     - result: Catacombs HolyFire Hammer
       chance: 1
-    - result: Catacombs Bat Greatsword
+    - result: Catacombs Bat Shortsword
       chance: 1
     - result: Frost Chakram
       chance: 1
