--- a/src/content/npcs/risan/FrozenCatacombs/2F.yml
+++ b/src/content/npcs/risan/FrozenCatacombs/2F.yml
@@ -594,7 +594,7 @@
       chance: 900
     - result: Catacombs HolyFire Hammer
       chance: 1
-    - result: Catacombs Bat Greatsword
+    - result: Catacombs Bat Shortsword
       chance: 1
     - result: Frost Chakram
       chance: 1
