--- a/src/content/npcs/risan/FrozenCatacombs/1F.yml
+++ b/src/content/npcs/risan/FrozenCatacombs/1F.yml
@@ -544,7 +544,7 @@
       chance: 1000
     - result: Catacombs HolyFire Hammer
       chance: 1
-    - result: Catacombs Bat Greatsword
+    - result: Catacombs Bat Shortsword
       chance: 1
     - result: Frost Chakram
       chance: 1
